2007-02-21 [wwp]	0.1.0cvs12

	* po/.cvsignore
		Updated to reflect plugin name change.

2007-02-20 [colin]	0.1.0cvs11

	* src/Makefile.am
		Fix missed commit

2007-02-20 [colin]	0.1.0cvs10

	* configure.ac
	* src/Makefile.am
	* src/poppler_viewer.c
		Handle application/octet-stream attachments
		if they really are pdf or postscript. Use
		specific icons (requires Claws 2.7.2cvs57)

2007-02-19 [colin]	0.1.0cvs9

	* po/it.po
		Fix format

2007-02-19 [paul]	0.1.0cvs8

	* configure.ac
	* po/it.po
		added translation by Salvatore De Paolis

2007-02-19 [paul]	0.1.0cvs7

	* src/poppler_viewer.c
		fix view update
		fix Prev button
		Thanks to Colin

2007-02-19 [wwp]	0.1.0cvs6

	* po/.cvsignore
		More files to ignore.

2007-02-19 [paul]	0.1.0cvs5

	* README
		List dependancies
	* config.h.in
		removed
	* configure.ac
		Remove Curl dependancy (wrongly pasted)
		Add gs dependancy for Postscript files
	* src/poppler_viewer.c
		fix ps handling
		Thanks to Colin

2007-02-19 [paul]	0.1.0cvs4

	* src/poppler_viewer.c
		Display error on broken files, and cleanup display
		Handle Postscript files
		Thanks to Colin

2007-02-19 [paul]	0.1.0cvs3

	* src/poppler_viewer.c
		make plugin_name translatable
		adjust plugin_desc

2007-02-19 [colin]	0.1.0cvs2

	* src/Makefile.in
		Remove wrongly-added file

2007-02-19 [colin]	0.1.0cvs1

	* .cvsignore
	* AUTHORS
	* COPYING
	* ChangeLog
	* INSTALL
	* Makefile.am
	* NEWS
	* README
	* autogen.sh
	* commitHelper
	* config.h.in
	* configure.ac
	* config/.cvsignore
	* config/Makefile.am
	* config/config.rpath
	* config/mkinstalldirs
	* po/.cvsignore
	* po/ChangeLog
	* po/Makefile.in.in
	* po/Makevars
	* po/POTFILES.in
	* po/fr.po
	* po/remove-potcdate.sin
	* src/.cvsignore
	* src/Makefile.am
	* src/Makefile.in
	* src/gettext.h
	* src/poppler_viewer.c
		Initial release
		The PopplerViewer plugin, written by Salvatore
		De Paolis, displays PDFs mimepart in the 
		messageview.
