@@ -1,1 +1,2 @@
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 po/.cvsignore;  ) > 0.1.0cvs12.patchset
+( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/poppler_viewer.c;  ) > 0.1.0cvs13.patchset
